--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "Demo Node.js app for AWS CI/CD pipeline",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",           // Production start command
-    "test": "jest",                   // Test runner for CI pipeline
-    "dev": "nodemon app.js"           // Development with auto-restart
+    "start": "node app.js",
+    "test": "jest",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"             // Production dependency
+    "express": "^4.18.2"
   },
-  "devDependencies": {               // Development-only dependencies
-    "jest": "^29.5.0",               // Testing framework
-    "supertest": "^6.3.3",           // HTTP testing library
-    "nodemon": "^2.0.22"             // Development auto-reload
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "nodemon": "^2.0.22"
   }
 }
-
